Edited index file

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 	<div class= "border-animal-card">		
 		<h3>Beetle</h3>		
-		<img  src="beetle_1.jpg" alt="name-of-your-animal" width="300" height="200px" margin="70px">
+		<img  src="beetle_1.jpg" alt="beetle" width="300" height="200px" margin="70px">
 		<div id="outerbox">			
 			<div class="information-border">
 				<!-- your favorite animal's interesting fact goes here -->
